# wonef

./: .gitignore  BCSBaseHandler.cpp  BCSBaseHandler.hpp  BCSBaseVerbsHandler.cpp  BCSBaseVerbsHandler.hpp  BestTranslations.cpp  BestTranslations.hpp  CMakeLists.txt  CalamondinMakefile  CalamondinPaths.hpp  CitrusMakefile  CitrusPaths.hpp  DEBVisDicDumper.cpp  Dictionaries.cpp  Dictionaries.hpp  Dumper.cpp  Dumper.hpp  EwnLoader.cpp  EwnLoader.hpp  ExtractorModule.cpp  ExtractorModule.hpp  GoldHandler.cpp  GoldHandler.hpp  HyperHypoModule.cpp  HyperHypoModule.hpp  HyperHypoVerbsModule.cpp  HyperHypoVerbsModule.hpp  JawsEvaluatorHandler.cpp  JawsEvaluatorHandler.hpp  JawsEvaluatorHandlerBench.cpp  JawsEvaluatorHandlerBench.hpp  JawsHandler.cpp  JawsHandler.hpp  JawsVerbsEvaluatorHandler.cpp  JawsVerbsEvaluatorHandler.hpp  JawsVerbsEvaluatorHandlerBench.cpp  JawsVerbsEvaluatorHandlerBench.hpp  LICENSE  LastChanceModule.cpp  LastChanceModule.hpp  (+69 more)
adjudication/: annotation_adverbes.xml  annotation_adverbes_gael.xml  annotation_adverbes_quentin.xml
convert/: convert2030.py  convert2030.sh
experiments/choose_random_synsets/: README  choose.py  keep_synsets.py
experiments/gold/: coherence_annotation.py
experiments/gold/MWE30/: ajouter_candidats_manquants.py  to30.py
experiments/gold/kappa/: adjectifs_jeanne30MWE.xml  adjectifs_quentin30MWE.xml  kappa.py  noms_jeanne30MWE.xml  noms_quentin30MWE.xml  stats.py  verbes_jeanne30MWE.xml  verbes_quentin30MWE.xml
experiments/goldMWE30/: README  ajouter_candidats_manquants.py  to30.py
experiments/stats/: README  adj_errors.xml  badsynsets.py  bcs.py  bestexamples.py  compareboth.py  mwe.py  nbpolysemous.py  nocandidates.py  noun_errors.xml  reasonsbad.py  verb_errors.xml
gold/: GT_adjs30.dev.xml  GT_adjs30.test.xml  GT_adjs30.xml  GT_adv30.dev.xml  GT_adv30.test.xml  GT_adv30.xml  GT_nouns30.dev.xml  GT_nouns30.test.xml  GT_nouns30.xml  GT_verbs30.dev.xml  GT_verbs30.test.xml  GT_verbs30.xml  cut.py
incorporate_gold/: GT_adjs30.xml  README  incorporate_gold.py  out.xml  subset.xml
results/: asfawin.sh  stats-wonef.ods  stats-wonef.txt  stats.sh
src/: BCSBaseHandler.cpp  BCSBaseHandler.hpp  BestTranslations.cpp  BestTranslations.hpp  CMakeLists.txt  DEBVisDicDumper.cpp  DEBVisDicDumper.hpp  Dumper.cpp  Dumper.hpp  EwnLoader.cpp  EwnLoader.hpp  ExtractorModule.cpp  ExtractorModule.hpp  GoldHandler.cpp  HyperHypoModule.cpp  HyperHypoModule.hpp  JawsHandler.hpp  LastChanceModule.cpp  LastChanceModule.hpp  Loader.cpp  Loader.hpp  MeroHoloLikeHyperModule.cpp  MeroHoloLikeHyperModule.hpp  MeroHoloModule.cpp  MeroHoloModule.hpp  Options.cpp  Paths.hpp  SimSynModule.cpp  SimSynModule.hpp  Tools.cpp  TranslatorModule.cpp  TypeRoler.cpp  TypeRoler.hpp  WolfHandler.cpp  WolfHandler.hpp  WolfOneHandler.cpp  WolfOneHandler.hpp  WordNet.cpp  WordNet.hpp  distance.hpp  (+9 more)
